feat(interactions): implement the item addition and removal in the form

--- a/docs/assets/styles/screen_styles.css
+++ b/docs/assets/styles/screen_styles.css
@@ -660,11 +660,11 @@ select):is(:hover,
   --input-bd-clr: var(--system-color-softBlue);
 }
 :is(input,
-select):invalid {
+select):invalid:not([data-new]) {
   --input-bd-clr: var(--system-color-softRed);
 }
 :is(input,
-select):invalid ~ label {
+select):invalid:not([data-new]) ~ label {
   color: var(--system-color-softRed);
   display: flex;
   justify-content: space-between;
