feat(interactions): implement the event event dispatcher
the dispatcher is used to update all element requesting update when the
state changes

feat(interactions): implement the dispatcher for generated children of
an element

--- a/docs/assets/styles/screen_styles.css
+++ b/docs/assets/styles/screen_styles.css
@@ -530,7 +530,7 @@ label {
   --color-fill: var(--system-color-blank);
 }
 
-  .blank-box:is(:focus, :hover) {
+  .invoice__summary:is(:focus, :hover) {
       border: 1px solid var(--system-color-softBlue);
   }
 .items-box {
