--- a/src/styles/screen_styles.styl
+++ b/src/styles/screen_styles.styl
@@ -446,7 +446,7 @@ button
     --radius: .5rem
     --color-fill: var(--system-color-blank)
 @css{
-    .blank-box:is(:focus, :hover) {
+    .invoice__summary:is(:focus, :hover) {
         border: 1px solid var(--system-color-softBlue);
     }
 }
