--- a/docs/assets/styles/screen_styles.css
+++ b/docs/assets/styles/screen_styles.css
@@ -174,9 +174,11 @@ section {
   --min-padding: 1.5em clamp(0.5em, 4cqi, 1.5em) 0.5em;
   block-size: calc(100lvb - min(7rem, 72px));
 }
+:is(button, .capitalize) {
+    text-transform: capitalize;
+}
 button {
   font-weight: 900;
-  text-transform: capitalize;
   font-size: clamp(0.75em, 4cqi, 1em);
 }
 .heading-l {
@@ -221,7 +223,7 @@ button {
   min-inline-size: 4.5rem;
   min-block-size: 3rem;
 }
-[class*="btn"]:enabled:is(:focus, :hover) {
+[class*="btn"]:enabled:is(:focus-visible, :hover) {
   color: var(--color-text-hover, var(--color-text));
   background-color: var(--color-fill-hover, transparent);
 }
@@ -267,7 +269,7 @@ button {
 .extend-click {
   position: relative;
 }
-.extend-click::before {
+:is(.inv-option > label, .extend-click)::before {
   content: "";
   inset: 0;
   position: absolute;
@@ -322,7 +324,7 @@ label {
   --icon-clip: url(#arrow_down);
   cursor: pointer;
 }
-[open] [data-icon="arrow_down"] {
+.opt-filter:is(:hover, :focus-visible, :focus-within) [data-icon="arrow_down"] {
   --icon-transform: rotateZ(180deg);
 }
 [data-icon="add-circle"] {
@@ -401,22 +403,26 @@ label {
   box-shadow: 0 4px 8px 0 var(--system-color-shadow);
   background-color: var(--system-color-blank);
   position: absolute;
-  inset-block-start: 110%;
-  inset-inline: -20%;
+  inset-block-start: 100%;
+  inset-inline-start: -50%;
   min-inline-size: min(12rem, 50vi);
   z-index: 1;
   opacity: 0;
+  transform: translateY(-3rem);
+  clip-path: inset(50%);
 }
-[open] #status-form {
+.opt-filter:is(:hover, :focus-visible, :focus-within) #status-form {
   opacity: 1;
+  transform: none;
+  clip-path: none;
 }
 .inv-option {
   --r-space: 1em;
   --label-color: var(--system-color-text);
+  position: relative;
   cursor: pointer;
 }
-.inv-option:focus,
-.inv-option:hover {
+.inv-option:is(:focus-within, :hover) {
   --checkbox-border: 2px solid var(--system-color-softBlue);
 }
 .status-option {
@@ -450,7 +456,7 @@ label {
   margin: 0;
   opacity: 0;
 }
-.theme-switch:is(:focus, :hover) {
+.theme-switch:is(:focus-visible, :hover) {
   --icon-fill: var(--system-color-lightPurple);
 }
 .theme-switch {
@@ -544,7 +550,7 @@ label {
   --color-fill: var(--system-color-blank);
 }
 
-  .invoice__summary:is(:focus, :hover) {
+  .invoice__summary:is(:focus-visible, :hover) {
       border: 1px solid var(--system-color-softBlue);
   }
   :is([data-status="paid"], [data-status="draft"]) .paid,
@@ -953,6 +959,7 @@ dialog h3 {
 	:is(.drawer, input, select, [class*="btn"]),
     :is(.theme-switch, .icon-start)::before,
     input[type="checkbox"] + svg,
+    #status-form,
     .icon-end::after {
 	    transition: all .35s cubic-bezier(.25, .1, .3, 1.5);
 	}
