--- a/docs/assets/styles/screen_styles.css
+++ b/docs/assets/styles/screen_styles.css
@@ -266,10 +266,7 @@ button {
   --prefix-color: currentColor;
   inline-size: 100%;
 }
-.extend-click {
-  position: relative;
-}
-:is(.inv-option > label, .extend-click)::before {
+inv-option > label::before {
   content: "";
   inset: 0;
   position: absolute;
@@ -277,8 +274,7 @@ button {
 .relative {
   position: relative;
 }
-.label-text,
-label {
+.label-text, label {
   color: var(--label-color, var(--system-color-labelText));
   font-weight: var(--label-weight, inherit);
 }
@@ -361,11 +357,11 @@ label {
   --status-text: var(--system-color-info);
   --status-fill: var(--system-color-infoFill);
 }
-[data-prefix]::before {
+[data-prefix]:not(:empty)::before {
   content: var(--prefix, attr(data-prefix));
   color: var(--prefix-color, var(--system-color-captionText));
 }
-[data-suffix]::after {
+[data-suffix]:not(:empty):after {
   content: var(--suffix, attr(data-suffix));
   color: var(--suffix-color, currentColor);
 }
@@ -490,6 +486,9 @@ label {
 .empty > p {
   max-inline-size: 25ch;
   white-space: pre-wrap;
+}
+.blank-box.invoice__summary {
+    min-inline-size: 100%;
 }
 .invoice__summary {
   --status-padding: var(--box-padding, 0.75rem clamp(0.5rem, 5cqi, 1.5rem));
@@ -637,8 +636,10 @@ step-by-step > .step-out {
   --prefix: var(--heading-text, unset);
 }
 .drawer[data-edit] {
+    --ref-display:inline;
+}
+.drawer[data-edit]:not([data-status="draft"]) {
   --drafter-display: none;
-  --ref-display: inline;
 }
 .drawer > div {
   --prefix-color: currentColor;
@@ -693,7 +694,7 @@ step-by-step > .step-out {
   align-items: baseline;
 }
 :is(input, select):invalid:not([data-new]) ~ label::after {
-  content: attr(data-error, "");
+  content: attr(data-error);
   font-size: 0.7em;
   text-transform: none;
 }
@@ -764,8 +765,7 @@ date-picker .actions {
   --deco-margin: auto 0;
   text-align: end;
 }
-.step-indicator > *:not(:last-child,
-.step-indicator > * :first-child) {
+.step-indicator > *:not(:last-child, :first-child) {
   padding-inline: var(--i-padding, 0.5em);
 }
 .step-indicator > *::after {
@@ -826,6 +826,14 @@ dialog::backdrop {
 dialog h3 {
   text-transform: capitalize;
   color: var(--system-color-text);
+}
+@keyframes shake {
+  20%, 60%, to {
+      transform: translateX(20%);
+  }
+  from, 40%, 80% {
+      transform: translateX(-20%);
+  }
 }
 @media screen and (min-width: 480px) {
   :root {
@@ -971,6 +979,9 @@ dialog h3 {
 	}
     dialog.blank-box {
       transition: transform .35s cubic-bezier(.25, .1, .3, 1.5);
+    }
+    :is(input, select):invalid:not([data-new]) {
+        animation: shake .35s cubic-bezier(.25, .1, .3, .15);
     }
 }
 
