--- a/src/App.module.css
+++ b/src/App.module.css
@@ -49,17 +49,134 @@ input:checked + svg {
   --fill: var(--system-color-softBlue);
   stroke-dashoffset: 0;
 }
-
+[data-drawer="show"] .drawer {
+    visibility: visible;
+  }
+.drawer {
+  --translateY: var(--y-offset, 72px);
+  --y-overflow: hidden;
+  --c-space: clamp(0.5em, 2vb, 1.5em);
+  position: fixed;
+  transform: translate(var(--x-offset, -100%), var(--translateY));
+  block-size: calc(100% - var(--translateY));
+  inset-block-start: 0;
+  inset-inline-start: 0;
+  isolation: isolate;
+  text-transform: capitalize;
+  inline-size: 100%;
+  z-index: 1;
+}
+.drawer h2 {
+  --prefix-color: currentColor;
+  --prefix: var(--heading-text, unset);
+}
+.drawer[data-edit] {
+    --ref-display:inline;
+}
+.drawer[data-edit]:not([data-status="draft"]) {
+  --drafter-display: none;
+}
+.drawer > div {
+  --prefix-color: currentColor;
+  --min-padding: 0.75em clamp(0.5em, 3cqi, 1.5em);
+  display: flex;
+  gap: 0.5em;
+  justify-content: end;
+  container: actions/inline-size;
+  background-color: var(--system-color-fillPrimary);
+}
+.drawer .btn-draft {
+  margin-inline-start: auto;
+  display: var(--drafter-display, initial);
+}
+.step-indicator {
+    --deco-size: 1.7em;
+    --bdr-width: 2px;
+    --deco-color: var(--system-color-labelText);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  font-size: 0.8em;
+}
+.step-indicator p {
+  display: var(--content-display, none);
+}
+.step-indicator > .step-active {
+  --deco-color: var(--system-color-darkPurple);
+  --deco-bg: var(--deco-color);
+  --deco-colorText: #fafafa;
+}
+.step-indicator > * {
+  padding-block: var(--b-padding, 0 2em);
+  counter-increment: indicator;
+  position: relative;
+  text-align: center;
+}
+.step-indicator > *:first-child {
+  --deco-img: linear-gradient(var(--gradient-dir, to right), transparent calc(var(--deco-size) + 2px), var(--deco-color) 0);
+  --deco-margin: 0 auto;
+  text-align: start;
+}
+.step-indicator > *:last-child {
+  --deco-img: linear-gradient(var(--gradient-dir, to right), var(--deco-color) calc(100% - var(--deco-size) - 4px), transparent 0);
+  --deco-margin: auto 0;
+  text-align: end;
+}
+.step-indicator > *:not(:last-child, :first-child) {
+  padding-inline: var(--i-padding, 0.5em);
+}
+.step-indicator > *::after {
+  content: counters(indicator, ".");
+  color: var(--deco-colorText, currentColor);
+  position: absolute;
+  display: inline-grid;
+  place-content: center;
+  border: var(--bdr-width) solid var(--deco-color);
+  border-radius: 50%;
+  inline-size: var(--deco-size);
+  aspect-ratio: 1;
+  inset: var(--inset-after, auto 0 0);
+  margin-inline: var(--deco-margin, auto);
+  background-color: var(--deco-bg, transparent);
+}
+.step-indicator > *::before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  block-size: 2px;
+  inset: var(--inset-before, auto 0 calc(0.85em - 1px));
+  background-image: var(--deco-img, linear-gradient(
+    var(--gradient-dir, to right),
+    var(--deco-color) calc(50% - 0.85em - 2px),
+    transparent 0 calc(50% + 0.85em + 2px), var(--deco-color) 0)
+  );
+}
 
 @media screen and (min-width: 480px) {
     .sm-hide:not(.invoice-grid) {
         display: initial;
     }
+    .step-indicator {
+    --content-display: block;
+  }
+  .drawer {
+    inline-size: clamp(480px, 69vi, 616px);
+    border-radius: 0 1.25em 1.25em 0;
+    visibility: hidden;
+  }
+
+
+}
+
+@media screen and (min-width: 768px) {
+    .drawer {
+        --y-offset: 0px;
+        --min-padding: 1.5em 1.5em 1.5em calc(72px + 1.5em);
+    }
 }
 
 @media (prefers-reduced-motion: no-preference){
-    .inv-option input:checked + svg {
-	    transition: stroke-dashoffset .35s cubic-bezier(.25, .1, .3, 1.5);
+    :is(.drawer, .inv-option input:checked + svg) {
+	    transition: all .35s cubic-bezier(.25, .1, .3, 1.5);
     }
 
 }
