--- a/src/App.module.css
+++ b/src/App.module.css
@@ -56,6 +56,7 @@ input:checked + svg {
   --s-space: 1rem;
   --label-weight: 500;
   font-weight: bold;
+  text-align: start;
   padding: clamp(0.5em, 5cqi, 1.5em);
   box-shadow: 0 2px 8px 0 var(--system-color-shadow);
 }
